--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,4 @@ fastlane/test_output
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
 
-iOSInjectionProject/
+.DS_Store
